<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/album_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/album_title"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/album_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/album_description"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_title" />

    <TextView
        android:id="@+id/album_can_be_seen_text"
        android:paddingBottom="10dp"
        android:text="@string/album_can_be_seen"
        app:layout_constraintTop_toBottomOf="@+id/album_description"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/privacy_view"
        android:paddingBottom="10dp"
        android:entries="@array/add_album_spinner"
        app:layout_constraintTop_toBottomOf="@+id/album_can_be_seen_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/album_can_be_commented_text"
        app:layout_constraintTop_toBottomOf="@+id/privacy_view"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/album_can_be_commented"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/privacy_comment"
        android:paddingBottom="10dp"
        android:entries="@array/add_album_spinner"
        app:layout_constraintTop_toBottomOf="@+id/album_can_be_commented_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>